Added a new page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="left__footer ">
                     <a href="# "><img src="./images/logofooter.svg " alt=" " class="footer__logo "></a>
                     <nav class="footer__nifnif ">
-                        <a href="# " class="footer__nav ">О нас</a>
+                        <a href="./Mum/about.html" class="footer__nav ">О нас</a>
                         <a href="# " class="footer__nav ">Проекты</a>
                         <a href="# " class="footer__nav ">Отзывы</a>
                         <a href="# " class="footer__nav ">Договор оферты</a>
