--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <a href="# "><img src="./images/logofooter.svg " alt=" " class="footer__logo "></a>
                     <nav class="footer__nifnif ">
                         <a href="./Mum/about.html" class="footer__nav ">О нас</a>
-                        <a href="# " class="footer__nav ">Проекты</a>
+                        <a href="./Mum/prog.html" class="footer__nav ">Проекты</a>
                         <a href="# " class="footer__nav ">Отзывы</a>
                         <a href="# " class="footer__nav ">Договор оферты</a>
                         <a href="# " class="footer__nav ">Договор подряда</a>
